<resources>
    <string name="app_name">KotlinVM</string>


    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="discovery_title">发现</string>
    <string name="about">关于</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>


    <string name="cancel">取消</string>

    <string name="nickname">ViewModel</string>
    <string name="view_homepage">ViewModel和LiveData能很好实现View层 和 Controller层的分离，而且通过约定的Base类可以很方便的实现加载界面、上下拉刷新等功能</string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">逻辑清晰的上下拉刷新</string>
    <string name="mine_attention">方便Fragment间通信</string>
    <string name="mine_cache">不同的加载样式</string>
    <string name="view_history">观看记录</string>
    <string name="feedback">意见反馈</string>


    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>


    <string name="copy_right_notice">内容部分归XuHao和公司《开眼Eyepetizer》版权所有</string>
    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="since">copyright ©2017 Xiho.</string>
    <string name="gitHub">GitHub</string>


</resources>
