<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_title_bg"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_title_bg">

        <RelativeLayout
            android:id="@+id/rel_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_about"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:src="@mipmap/ic_about" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <com.coorchice.library.SuperTextView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:corner="40dp"
            app:drawableAsBackground="true"
            app:state_drawable="@mipmap/img_avatar"
            app:stroke_color="@color/color_gray"
            app:stroke_width="2dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nickname"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_view_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:lineSpacingExtra="@dimen/dp_4"
        android:paddingBottom="@dimen/padding_common_d"
        android:paddingTop="@dimen/padding_common_d"
        android:text="@string/view_homepage"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/textSize_content" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/color_gray" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/mRvShow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_message"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mCommunicate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_attention"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mDifLoading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_cache"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_watch_history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/view_history"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/feedback"
                android:textSize="14sp" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>